*  Social Networks Visualiser (SocNetV)  *
******************************************

ChangeLog:

Version 0.80 - July 30  2009  (PROJECTED)
Codename: "sitakia"
----------------------------
- added keyboard shortcuts for Centralities
- Fixed bug #396124, GBC different in Pajek cp. to SocNetV
- Changed ProgressBar behaviour: bars appear only if nodes are more than 300


Version 0.70 - June 30  2009
Codename: "Summertime"
----------------------------
- First web Crawler implementation. Use Shift+C to test it. Doesn't support frames yet...
- Multiple nodes can be selected with mouse. Press and hold left mouse button somewhere on the canvas, then move mouse to test it.
- Fixed bug #379204 which was crashing SocNetV when creating small worlds above 201 nodes
- Fixed bug #381096 crashing SocNetV in Edge Filtering when an edge was reciprocal.
- Fixed bug #381094 weight changes not recorded correctly in symmetric edges.
- To speed things up, the on-the-fly Clustering Coef. and Average Distance
calculation was removed from random network creation routines.
- Random Layout is back!
- Speed improvement in FindNode method.
- Progress Bars now appear whenever a distance-related calculation is
happening, so that the user knows what is happening and how long it will take.
- Tom Tryfonidis prepared Arch PKGBUILDs for SocNetV. You can install it from
AUR.
- Reverted to older version name scheme. All versions: 0.XX




Version 0.6.0 - May 27 2009
Codename: "Spring"
----------------------------
- GraphML becomes our native load/save format ( partially support for yFiles)
- New filter edges by their weights functionality. 
- The background can be a custom image (via menu View > Background Image)
- New rounded rectangle shape for nodes.
- Nodenumbers can be displayed inside nodes, once again. Sorry, labels are
too difficult to show inside nodes :(
- Fresh application iconset in shades of gold and gray. 
- New version name scheme. Main versions: 0.x Bugfixes: 0.x.y 