@@ -1,6 +1,6 @@
 #############################################################################
 # Makefile for building: socnetv
-# Generated by qmake (2.01a) (Qt 4.5.2) on: Tue Jul 21 01:00:17 2009
+# Generated by qmake (2.01a) (Qt 4.5.0) on: Tue Jul 21 16:55:27 2009
 # Project:  socnetv.pro
 # Template: app
 # Command: /usr/bin/qmake-qt4 -unix -after  CONFIG+=release -o Makefile socnetv.pro
@@ -123,7 +123,6 @@ DIST          = /usr/share/qt4/mkspecs/common/g++.conf \
 		/usr/share/qt4/mkspecs/features/uic.prf \
 		/usr/share/qt4/mkspecs/features/yacc.prf \
 		/usr/share/qt4/mkspecs/features/lex.prf \
-		/usr/share/qt4/mkspecs/features/include_source_dir.prf \
 		socnetv.pro
 QMAKE_TARGET  = socnetv
 DESTDIR       = 
@@ -174,7 +173,6 @@ Makefile: socnetv.pro  /usr/share/qt4/mkspecs/linux-g++/qmake.conf /usr/share/qt
 		/usr/share/qt4/mkspecs/features/uic.prf \
 		/usr/share/qt4/mkspecs/features/yacc.prf \
 		/usr/share/qt4/mkspecs/features/lex.prf \
-		/usr/share/qt4/mkspecs/features/include_source_dir.prf \
 		/usr/lib/libQtWebKit.prl \
 		/usr/lib/libQtXml.prl \
 		/usr/lib/libQtGui.prl \
@@ -199,7 +197,6 @@ Makefile: socnetv.pro  /usr/share/qt4/mkspecs/linux-g++/qmake.conf /usr/share/qt
 /usr/share/qt4/mkspecs/features/uic.prf:
 /usr/share/qt4/mkspecs/features/yacc.prf:
 /usr/share/qt4/mkspecs/features/lex.prf:
-/usr/share/qt4/mkspecs/features/include_source_dir.prf:
 /usr/lib/libQtWebKit.prl:
 /usr/lib/libQtXml.prl:
 /usr/lib/libQtGui.prl:
